Complete rename of skill to position across codebase and SQL